[gd_scene load_steps=5 format=3 uid="uid://bx840chrggirn"]

[ext_resource type="Script" uid="uid://vjl5jqslex0m" path="res://scripts/systems/menus/pause_menu.gd" id="1_di3gk"]
[ext_resource type="Theme" uid="uid://cdp1vqedgum7d" path="res://themes/menu.tres" id="1_tee13"]
[ext_resource type="Shader" uid="uid://ttp64b40x1wj" path="res://shaders/pause_blur.gdshader" id="2_83pee"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w0y6w"]
shader = ExtResource("2_83pee")
shader_parameter/sigma = 3.3
shader_parameter/blur = true

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_di3gk")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_w0y6w")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -124.0
offset_right = 960.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tee13")
alignment = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Resume"

[node name="UpgradesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrades"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Resume")
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="resume"]
[connection signal="pressed" from="VBoxContainer/UpgradesButton" to="." method="_on_upgrades_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
